fix player settings